--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
-cycler==0.10.0
-kiwisolver==1.3.1
-llvmlite==0.36.0
-matplotlib==3.4.1
-numpy==1.20.2
-pandas==1.2.3
-Pillow==8.2.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-scipy==1.6.2
-six==1.15.0
+numba~=0.53.1
+seaborn~=0.11.1
+setuptools~=56.0.0
+numpy~=1.20.2
+scipy~=1.6.2
+pandas~=1.2.3
+matplotlib~=3.4.1
